<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gallery</string>
    <string name="albums">Album</string>
    <string name="videos">Video</string>
    <string name="favorites">Favorite</string>
    <string name="locations">Location</string>
    <string name="secure_folder">Secure Folder</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="details">Details</string>
    <string name="input_your_password">Input your password</string>
    <string name="log_in">Log in</string>
    <string name="hint_password">Password</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="delete_pic">Delete</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="create_album">Create album</string>
    <string name="view_by_date">View by date</string>
    <string name="view_people">People</string>
    <string name="view_by_people">View by people</string>
    <string name="change_to_linear_layout">Change to Linear layout</string>
    <string name="change_to_grid_layout">Change to Grid layout</string>
    <string name="copy">Copy</string>
    <string name="tag_location">Tag location</string>
    <string name="slideshow">Slideshow</string>
</resources>