<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/inputTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:text="@string/input_your_password"
            android:textSize="@dimen/_25ssp"
            android:fontFamily="sans-serif"
            android:gravity="center"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/custom_bar"
            android:textSize="@dimen/_16ssp"
            android:backgroundTint="#dfdfdf"
            android:ems="10"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:layout_below="@+id/inputTxt"/>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTintMode="add"
            android:backgroundTint="@color/teal_700"
            android:text="@string/log_in"
            android:textSize="@dimen/_16ssp"
            android:onClick="onClick"
            android:layout_below="@+id/input_password"
            tools:targetApi="lollipop" />

    </RelativeLayout>



</RelativeLayout>