<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Settings">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_175sdp"
        android:background="@color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Gallery">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:title="@string/settings"
            app:expandedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/ExpandedText"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <include
                android:id="@+id/toolbarSettings"
                layout="@layout/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_night"
            android:layout_width="@dimen/_295sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bar"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/dark_mode"
            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:checked="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/language_change"
            android:layout_width="@dimen/_296sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bar"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/language"
            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/switch_night"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
